# zarr-fractional-rescale

./: .gitignore  README.md  fraction_upscale.py  pixi.toml  pyproject.toml
src/: fractional_upscale.py
