[tool.poetry]
name = "fractional-upscale"
version = "0.1.0"
description = ""
authors = ["Yurii Zubov <zubov452@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dask = "^2024.8.0"
numcodecs = "^0.13.0"
numpy = "^2.0.1"
scipy = "^1.14.0"
dask-jobqueue = "0.8.2"
click = "^8.1.7"
pint = "^0.24.4"
cellmap-utils = "0.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
